--- a/templates/frontend/home.twig
+++ b/templates/frontend/home.twig
@@ -9,5 +9,10 @@
 <body>
 <h1>Home</h1>
 <p>Demo</p>
+<form action="{{ url }}" method="post">
+<p><input type="text" name="name" id=""></p>
+<p><input type="password" name="pwd" id=""></p>
+<p><input type="submit" value="Login"></p>
+</form>
 </body>
 </html>
